--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     Hi! I am Ekam Singh and i am now working on 2nd lecture.
+    its already been late but i have to complete the lecture.
+    and now on netlify.
 </body>
 </html>
