--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     Hi! I am Ekam Singh and i am now working on 2nd lecture.
     its already been late but i have to complete the lecture.
     and now on netlify.
+
+    today just talked to Rishu Singh and he really wants me to be a good developer
 </body>
 </html>
